# AVP

./: .gitignore  README.md  launch.json  pyproject.toml
avp/audio/: filter.py  generate.py  signal.py  util.py  visual.py
avp/video/: camera.py  ml.py  photo.py  phrame.py  vcam.py
notebooks/: ndsignal.ipynb  video.ipynb
notebooks/dev/: core.ipynb  iirfiltering.ipynb  ndphoto.ipynb  ndphrame.ipynb  ndsignal.ipynb  signal.ipynb  spectrum.ipynb
tests/: test_signal.py
